--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
-body {
+*{
+   margin:0;
+   padding:0; 
+}
 
+body {
     background-color: #3b3b3b;
+    /* background-color: #3b3b3b; */
     color:rgb(223, 191, 255)
 }
 b{
@@ -15,7 +20,8 @@ b{
     color: rgb(91, 71, 110);
 }
 .card-bodys{
-    background-color: #3b3b3b;
+    /* background-color: #3b3b3b; */
+    background-color: #212529;
     margin: 3px;
     padding-left: 5px;
 }
